build/log/idf_py_stderr_output_76139
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:57:45: error: 'i' undeclared (first use in this function)
   57 |                                         for(i=0;i<sizeof(bufferCount);i++){
      |                                             ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:57:45: note: each undeclared identifier is reported only once for each function it appears in
/home/bmetal/esp-idf/uartTest/main/uartTest.c:70:69: error: subscripted value is neither array nor pointer nor vector
   70 |                                         readBuffer[0] = receivedByte[0];
      |                                                                     ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:72:41: error: 'bufferCounter' undeclared (first use in this function); did you mean 'bufferCount'?
   72 |                                         bufferCounter += 1;
      |                                         ^~~~~~~~~~~~~
      |                                         bufferCount
/home/bmetal/esp-idf/uartTest/main/uartTest.c:86:41: error: 'laserBuffer' undeclared (first use in this function); did you mean 'setbuffer'?
   86 |                                         laserBuffer[bufferCount] = receivedByte[0];
      |                                         ^~~~~~~~~~~
      |                                         setbuffer
/home/bmetal/esp-idf/uartTest/main/uartTest.c:86:80: error: subscripted value is neither array nor pointer nor vector
   86 |                                         laserBuffer[bufferCount] = receivedByte[0];
      |                                                                                ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:51:17: error: enumeration value 'PRINTING' not handled in switch [-Werror=switch]
   51 |                 switch(status)
      |                 ^~~~~~
cc1: all warnings being treated as errors
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
